Changed gitiignore file

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+yarn.lock
 
 # BUCK
 buck-out/
@@ -62,3 +63,4 @@ buck-out/
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+Podfile.lock
