--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
