--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
