--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/database": "^17.4.0",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
@@ -21,9 +22,11 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
