--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.5.1",
     "react-native-safe-area-context": "^4.5.0",
