Added asyncThunk abort, Added cloud firestore for get and add API calls

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-firebase/app": "^17.4.0",
     "@react-native-firebase/database": "^17.4.0",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
