--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
+    "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.5.1",
