--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.5.1",
+    "react-native-permissions": "^3.8.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-tab-view": "^3.5.1",
