--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
+    "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
@@ -41,7 +42,8 @@
     "react-redux": "^8.0.5",
     "recyclerlistview": "^4.2.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -57,8 +59,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
