--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/auth": "^17.4.2",
     "@react-native-firebase/firestore": "^17.4.2",
     "@react-native-firebase/storage": "^17.4.2",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -27,7 +28,6 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
-    "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.3.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
