--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
     "react-redux": "^8.0.5",
     "recyclerlistview": "^4.2.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "rn-fetch-blob": "^0.12.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
