Added code to get permissions to read contacts

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-contacts": "^7.0.5",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-picker": "^5.3.1",
@@ -50,6 +52,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.8",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
