--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.5",
@@ -26,8 +26,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
+    "react": "18.2.0",
+    "react-native": "0.71.0",
     "react-native-contacts": "^7.0.5",
     "react-native-date-picker": "^4.2.9",
     "react-native-fast-image": "^8.6.3",
@@ -50,12 +50,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@babel/preset-env": "^7.14.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.8",
-    "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
@@ -64,12 +62,16 @@
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "@react-native-community/eslint-config": "^3.0.0",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.24",
+    "babel-jest": "^29.2.1",
+    "eslint": "^8.19.0",
+    "jest": "^29.2.1",
+    "metro-react-native-babel-preset": "0.73.5",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "18.2.0",
+    "typescript": "^4.8.4"
   },
   "jest": {
     "preset": "react-native",
