--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
     "@babel/preset-env": "^7.14.0",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^3.0.0",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.8",
+    "@types/react": "^18.0.24",
     "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-redux": "^7.1.25",
@@ -62,10 +65,8 @@
     "@types/redux-thunk": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "@react-native-community/eslint-config": "^3.0.0",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.5",
