--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
   },
   "dependencies": {
     "@bam.tech/react-native-image-resizer": "^3.0.5",
@@ -24,6 +25,8 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -63,16 +66,23 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.5",
-    "prettier": "^2.4.1",
+    "prettier": "^3.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^4.8.4"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,json}": [
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "jest": {
     "preset": "react-native",
